Bug 416607 - plugins-impex-kis_kra_saver_test (Failed)
Summary: plugins-impex-kis_kra_saver_test (Failed)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Unittests (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-22 15:05 UTC by Halla Rempt
Modified: 2020-08-12 17:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2020-01-22 15:05:51 UTC
253/285 Testing: plugins-impex-kis_kra_saver_test
253/285 Test: plugins-impex-kis_kra_saver_test
Command: "/home/boud/dev/b-krita/plugins/impex/libkra/tests/kis_kra_saver_test"
Directory: /home/boud/dev/b-krita/plugins/impex/libkra/tests
"plugins-impex-kis_kra_saver_test" start time: Jan 22 15:25 CET
Output:
----------------------------------------------------------
********* Start testing of KisKraSaverTest *********
Config: Using QtTest library 5.13.2, Qt 5.13.2 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 7.4.0)
PASS   : KisKraSaverTest::initTestCase()
PASS   : KisKraSaverTest::testCrashyShapeLayer()
QWARN  : KisKraSaverTest::testRoundTrip() KoColor debug runtime checks are active.
QWARN  : KisKraSaverTest::testRoundTrip() krita.core: BUG: The walker hasn't reached the root layer!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Start node: KisGroupLayer(0x555625e618c0, name = "group1") Requested rect: QRect(-100,-100 273x100)
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      An inconsistency in the walkers occurred!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Please report a bug describing how you got this message.
QWARN  : KisKraSaverTest::testRoundTrip() krita.core: BUG: The walker hasn't reached the root layer!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Start node: KisGroupLayer(0x555625e618c0, name = "group1") Requested rect: QRect(-100,0 100x173)
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      An inconsistency in the walkers occurred!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Please report a bug describing how you got this message.
QWARN  : KisKraSaverTest::testRoundTrip() krita.core: BUG: The walker hasn't reached the root layer!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Start node: KisGroupLayer(0x5556255ded80, name = "group1") Requested rect: QRect(-120,-120 40x40)
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      An inconsistency in the walkers occurred!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Please report a bug describing how you got this message.
QWARN  : KisKraSaverTest::testRoundTrip() krita.core: BUG: The walker hasn't reached the root layer!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Start node: KisGroupLayer(0x5556255ded80, name = "group1") Requested rect: QRect(-120,-120 40x40)
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      An inconsistency in the walkers occurred!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Please report a bug describing how you got this message.
QWARN  : KisKraSaverTest::testRoundTrip() krita.core: BUG: The walker hasn't reached the root layer!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Start node: KisGroupLayer(0x5556255ded80, name = "group1") Requested rect: QRect(-120,-120 40x40)
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      An inconsistency in the walkers occurred!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Please report a bug describing how you got this message.
QWARN  : KisKraSaverTest::testRoundTrip() krita.core: BUG: The walker hasn't reached the root layer!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Start node: KisGroupLayer(0x5556255ded80, name = "group1") Requested rect: QRect(-100,-100 404x100)
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      An inconsistency in the walkers occurred!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Please report a bug describing how you got this message.
QWARN  : KisKraSaverTest::testRoundTrip() krita.core: BUG: The walker hasn't reached the root layer!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Start node: KisGroupLayer(0x5556255ded80, name = "group1") Requested rect: QRect(-100,0 100x304)
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      An inconsistency in the walkers occurred!
QWARN  : KisKraSaverTest::testRoundTrip() krita.core:      Please report a bug describing how you got this message.
PASS   : KisKraSaverTest::testRoundTrip()
PASS   : KisKraSaverTest::testSaveEmpty()
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripFillLayerColor() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripFillLayerColor() --- External image not found. Skipping... "00_initial_layer_update"
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerColor() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripFillLayerColor() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripFillLayerColor() --- External image not found. Skipping... "01_fill_layer_round_trip"
PASS   : KisKraSaverTest::testRoundTripFillLayerColor()
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripFillLayerPattern() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripFillLayerPattern() --- External image not found. Skipping... "00_initial_layer_update"
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripFillLayerPattern() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripFillLayerPattern() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripFillLayerPattern() --- External image not found. Skipping... "01_fill_layer_round_trip"
PASS   : KisKraSaverTest::testRoundTripFillLayerPattern()
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripLayerStyles() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripLayerStyles() --- External image not found. Skipping... "00_initial_layers"
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: convertAndSetBlendMode: Curve conversion is not implemented yet
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: convertAndSetBlendMode: Curve conversion is not implemented yet
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: convertAndSetBlendMode: Curve conversion is not implemented yet
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripLayerStyles() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripLayerStyles() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripLayerStyles() --- External image not found. Skipping... "00_initial_layers"
PASS   : KisKraSaverTest::testRoundTripLayerStyles()
FAIL!  : KisKraSaverTest::testRoundTripAnimation() '!layer1->useInTimeline()' returned FALSE. ()
   Loc: [/home/boud/dev/krita/plugins/impex/libkra/tests/kis_kra_saver_test.cpp(301)]
FAIL!  : KisKraSaverTest::testRoundTripColorizeMask() Compared pointers are not the same
   Loc: [/home/boud/dev/krita/plugins/impex/libkra/tests/kis_kra_saver_test.cpp(406)]
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripShapeLayer() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripShapeLayer() --- External image not found. Skipping... "00_initial_layer_update"
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeLayer() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripShapeLayer() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripShapeLayer() --- External image not found. Skipping... "01_shape_layer_round_trip"
PASS   : KisKraSaverTest::testRoundTripShapeLayer()
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripShapeSelection() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripShapeSelection() --- External image not found. Skipping... "00_initial_shape_selection"
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() krita.general: Environment variable "KRITA_UNITTESTS_DATA_DIR" is not set
QWARN  : KisKraSaverTest::testRoundTripShapeSelection() QFSFileEngine::open: No file name specified
QDEBUG : KisKraSaverTest::testRoundTripShapeSelection() Images have different sizes QSize(512, 512) QSize(0, 0)
QDEBUG : KisKraSaverTest::testRoundTripShapeSelection() --- External image not found. Skipping... "00_initial_shape_selection"
PASS   : KisKraSaverTest::testRoundTripShapeSelection()
QDEBUG : KisKraSaverTest::testExportToReadonly() Entering "TestUtil::prepareFile()" QFlags(0x2|0x4|0x20|0x40|0x200|0x400|0x2000|0x4000)
QDEBUG : KisKraSaverTest::testExportToReadonly() Entering "TestUtil::testExportToReadonly()" QObject(0x0)
QDEBUG : KisKraSaverTest::testExportToReadonly() export result =  Cannot write:  0   "Cannot open file for writing. Reason: An error occurred when writing to the file."
PASS   : KisKraSaverTest::testExportToReadonly()
PASS   : KisKraSaverTest::cleanupTestCase()
Totals: 11 passed, 2 failed, 0 skipped, 0 blacklisted, 4324ms
********* Finished testing of KisKraSaverTest *********
<end of output>
Test time =   5.06 sec
----------------------------------------------------------
Test Failed.
"plugins-impex-kis_kra_saver_test" end time: Jan 22 15:25 CET
"plugins-impex-kis_kra_saver_test" time elapsed: 00:00:05
----------------------------------------------------------
Comment 1 Dmitry Kazakov 2020-08-10 18:25:39 UTC
Git commit e96533874a258e258a0bcc0906cbdb0d3351b86b by Dmitry Kazakov.
Committed on 10/08/2020 at 18:24.
Pushed by dkazakov into branch 'krita/4.3'.

Fix some file format tests that tried to save the document not via KisDocument

Now the document can only be saved via KisDocument API only, it is
needed because m_savingDocument variable. It was introduced for
asynchronous saving.

M  +1    -1    plugins/impex/exr/tests/kis_exr_test.cpp
M  +2    -2    plugins/impex/tiff/tests/kis_tiff_test.cpp
M  +7    -32   sdk/tests/filestest.h

https://invent.kde.org/graphics/krita/commit/e96533874a258e258a0bcc0906cbdb0d3351b86b
Comment 2 Dmitry Kazakov 2020-08-10 18:25:48 UTC
Git commit 0bf9b89fc984e76f8f3bceeab17ad2b509f028c9 by Dmitry Kazakov.
Committed on 10/08/2020 at 18:24.
Pushed by dkazakov into branch 'krita/4.3'.

Fix loading colorize masks with custom profiles

Older versions of Krita couldn't store a custom ICC profile for colorize
masks. In such cases the profile of the parent layer is used. For newer
versions, the custom profile will be saved into .kra

M  +51   -11   plugins/impex/libkra/kis_kra_load_visitor.cpp
M  +2    -0    plugins/impex/libkra/kis_kra_load_visitor.h
M  +12   -3    plugins/impex/libkra/kis_kra_save_visitor.cpp
M  +1    -0    plugins/impex/libkra/kis_kra_save_visitor.h
M  +2    -3    plugins/impex/libkra/tests/kis_kra_saver_test.cpp

https://invent.kde.org/graphics/krita/commit/0bf9b89fc984e76f8f3bceeab17ad2b509f028c9
Comment 3 Dmitry Kazakov 2020-08-10 19:01:03 UTC
Git commit be03a06e24aebfece3ce4bbe94428fe1ac32fa17 by Dmitry Kazakov.
Committed on 10/08/2020 at 18:58.
Pushed by dkazakov into branch 'krita/4.3'.

Unbreak KisKraSaverTest

M  +1    -7    plugins/impex/libkra/tests/CMakeLists.txt

https://invent.kde.org/graphics/krita/commit/be03a06e24aebfece3ce4bbe94428fe1ac32fa17
Comment 4 Dmitry Kazakov 2020-08-12 17:52:56 UTC
Git commit f1129e94ba2d093deacb3e2ccd2e87cb3c986ca5 by Dmitry Kazakov.
Committed on 12/08/2020 at 17:52.
Pushed by dkazakov into branch 'master'.

Fix loading colorize masks with custom profiles

Older versions of Krita couldn't store a custom ICC profile for colorize
masks. In such cases the profile of the parent layer is used. For newer
versions, the custom profile will be saved into .kra

# Conflicts:
#	plugins/impex/libkra/kis_kra_load_visitor.h
#	plugins/impex/libkra/tests/kis_kra_saver_test.cpp

M  +51   -11   plugins/impex/libkra/kis_kra_load_visitor.cpp
M  +1    -0    plugins/impex/libkra/kis_kra_load_visitor.h
M  +12   -3    plugins/impex/libkra/kis_kra_save_visitor.cpp
M  +1    -0    plugins/impex/libkra/kis_kra_save_visitor.h
M  +1    -1    plugins/impex/libkra/tests/kis_kra_saver_test.cpp

https://invent.kde.org/graphics/krita/commit/f1129e94ba2d093deacb3e2ccd2e87cb3c986ca5
Comment 5 Dmitry Kazakov 2020-08-12 17:53:04 UTC
Git commit d0af1fceaa77663d707a57e142015c294b5c4f9c by Dmitry Kazakov.
Committed on 12/08/2020 at 17:52.
Pushed by dkazakov into branch 'master'.

Fix some file format tests that tried to save the document not via KisDocument

Now the document can only be saved via KisDocument API only, it is
needed because m_savingDocument variable. It was introduced for
asynchronous saving.

M  +1    -1    plugins/impex/exr/tests/kis_exr_test.cpp
M  +2    -2    plugins/impex/tiff/tests/kis_tiff_test.cpp
M  +7    -32   sdk/tests/filestest.h

https://invent.kde.org/graphics/krita/commit/d0af1fceaa77663d707a57e142015c294b5c4f9c
Comment 6 Dmitry Kazakov 2020-08-12 17:54:17 UTC
Git commit f878c0d58e16a3afa9b538e85b4f56da62f94ba3 by Dmitry Kazakov.
Committed on 12/08/2020 at 17:52.
Pushed by dkazakov into branch 'master'.

Unbreak KisKraSaverTest

M  +1    -7    plugins/impex/libkra/tests/CMakeLists.txt

https://invent.kde.org/graphics/krita/commit/f878c0d58e16a3afa9b538e85b4f56da62f94ba3