Fix loading colorize masks with custom profiles

Older versions of Krita couldn't store a custom ICC profile for colorize
masks. In such cases the profile of the parent layer is used. For newer
versions, the custom profile will be saved into .kra

BUG:416607